; ModuleID = '/home/carl/AnghaBench/openssl/crypto/ct/extr_ct_sct_ctx.c_SCT_CTX_new.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/ct/extr_ct_sct_ctx.c_SCT_CTX_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CT_F_SCT_CTX_NEW = common dso_local global i32 0, align 4
@ERR_R_MALLOC_FAILURE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @SCT_CTX_new() #0 {
  %1 = alloca i32*, align 8
  %2 = call i32* @OPENSSL_zalloc(i32 4)
  store i32* %2, i32** %1, align 8
  %3 = load i32*, i32** %1, align 8
  %4 = icmp eq i32* %3, null
  br i1 %4, label %5, label %9

5:                                                ; preds = %0
  %6 = load i32, i32* @CT_F_SCT_CTX_NEW, align 4
  %7 = load i32, i32* @ERR_R_MALLOC_FAILURE, align 4
  %8 = call i32 @CTerr(i32 %6, i32 %7)
  br label %9

9:                                                ; preds = %5, %0
  %10 = load i32*, i32** %1, align 8
  ret i32* %10
}

declare dso_local i32* @OPENSSL_zalloc(i32) #1

declare dso_local i32 @CTerr(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
